Move API to versioned v1 paths
